# bowtie2_py

./: .gitignore  README.md  pyproject.toml
bowtie2_py/: __main__.py  bowtie2.py  main.py  version
tests/: platform.py  run.ps1
