[project]
name = "bowtie2-py"
version = "2025.4.22.0"
description = "bowtie2 python wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/soda92/bowtie2_py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
packages = ["bowtie2_py"]
exclude = ["__pycache__", "*.pyc", "*.exe", "*.exe~", "*.syso"]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = ["bowtie2_py"]
exclude = ["__pycache__", "*.pyc", "*.exe~", "*.syso"]

[project.scripts]
bowtie2 = "bowtie2_py.main:main"
